Design for main navigation

--- a/lenses/templates/lenses/lens_all_collections.html
+++ b/lenses/templates/lenses/lens_all_collections.html
@@ -1,8 +1,8 @@
 {% extends 'master_header.html' %}
 {% block content %}
 
-<div class="section">
-  <h1>Standardized queries</h1>
+<div class="jb-container">
+  <h1 class="jb-heading-1">Standardized queries</h1>
 
   <ul>
     <li>Get only quasars</li>
@@ -15,8 +15,8 @@
 
 
 
-<div class="section">
-  <h1>Collections</h1>
+<div class="jb-container">
+  <h1 class="jb-heading-3">Collections</h1>
 
   <ul>
     <li>CASTLES</li>
