--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -14,35 +14,35 @@
 
 {% block content %}
 
-  <div class="sign-up-wrap w-container">
-    <div class="w-form">
+<div class="jb-sign-up-wrap jb-container">
+  <div class="jb-form">
 
-      <form id="email-form" class="form-2" method="post" action="">
-        <img src="{% static 'images/0SLED_Logo-Login.png' %}" loading="lazy" width="40" alt="" class="image-7">
-        {% csrf_token %}
-          <!--{{ form.as_p }} -->
-          {{ form.non_field_errors }}
-          <div class="form-group">
-              
-              <label for="{{ form.username.id_for_label }}">Username:</label>
-              {{ form.username }}
-              {{ form.username.errors }}
+    <form id="email-form" class="jb-form-1" method="post" action="">
+      <img src="{% static 'images/JB_Login_SLED-Logo.png' %}" loading="lazy" width="40" alt="" class="jb-image-1">
+      {% csrf_token %}
+      <!--{{ form.as_p }} -->
+      {{ form.non_field_errors }}
+      <div class="jb-form">
 
-          </div>
-          <div class="form-group">
-             
-              <label for="{{ form.password.id_for_label }}">Password:</label>
-              {{ form.password }}
-              {{ form.password.errors }}
-          </div>
+        <label for="{{ form.username.id_for_label }}">Username:</label>
+        {{ form.username }}
+        {{ form.username.errors }}
 
-          <td><input type="submit" value="Login" data-wait="Please wait..." class="submit-button-2 w-button"></td>
-        <p class="paragraph-2">New? Register <a href="{% url 'register' %}" class="link">here</a>.</p>
-      </form>             
+      </div>
+      <div class="jb-form">
+
+        <label for="{{ form.password.id_for_label }}">Password:</label>
+        {{ form.password }}
+        {{ form.password.errors }}
+      </div>
+
+      <td><input type="submit" value="Login" data-wait="Please wait..." class="jb-submit-button w-button"></td>
+      <p class="jb-paragraph-1">New? Register <a href="{% url 'register' %}">here</a>.</p>
+    </form>
 
 
-      <!-- {{ form.username.label }}{{ form.username }} -->
-      <!-- {{ form.as_p }} 
+    <!-- {{ form.username.label }}{{ form.username }} -->
+    <!-- {{ form.as_p }}
       <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form-2"><img src="{% static 'images/0SLED_Logo-Login.png' %}" loading="lazy" width="40" alt="" class="image-7">
         {% csrf_token %}
         <label for="name" class="field-label">Username</label>
@@ -59,14 +59,14 @@
       <div class="error-message w-form-fail">
         <div class="text-block-2">Oops! Something went wrong while submitting the form.</div>
       </div>-->
-    </div>
   </div>
+</div>
 
 <script type="text/javascript">
   $('form').each(function() {
-      if (!$(this).is('[action]')) {
-          $(this).attr('action', '/');
-      }
+    if (!$(this).is('[action]')) {
+      $(this).attr('action', '/');
+    }
   });
   // $('#id_username').addClass('text-field',"w-input").attr({"data-name":'Name'});
 </script>
