--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,14 +1,14 @@
 h1, h2, h3, h4 {
-    font-family: 'Exo 2', Arial, sans-serif;
-    font-weight: 500;
+  font-family: 'Exo 2', Arial, sans-serif;
+  font-weight: 500;
 }
 
-h1{
-    font-size:30pt
+h1 {
+  font-size: 30pt
 }
 
 h3 {
-    font-size: 12pt
+  font-size: 12pt
 }
 
 .myImage {
@@ -16,8 +16,9 @@ h3 {
   width: 10%;
   font-family: Veranda;
 }
+
 .heading {
-  float:right;
+  float: right;
 }
 
 #container {
@@ -34,466 +35,451 @@ h3 {
   width: 100px;
   height: 100px;
 }
+
 .inline-block {
-   display: inline-block;
+  display: inline-block;
 }
 
 figure {
-    width: 20%;
-    float: center;
-    margin: 0;
-    text-align: center;
-    padding: 0;
+  width: 20%;
+  float: center;
+  margin: 0;
+  text-align: center;
+  padding: 0;
 }
-
-
 
 h2 {
-    padding-top: 10px
+  padding-top: 10px
 }
 
-
-
 body {
-    background: #EFEFEF;
-    margin: 5px !important;
-    padding: 0 !important;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
+  background: #EFEFEF;
+  margin: 5px !important;
+  padding: 0 !important;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
 }
 
 .topmenu {
-    /*background-color: #25275D;*/
-    margin-top: 10px;
-    margin-right: 0px;
-    margin-left: 0px;
-    padding: 0px 0px 0px 0px;
-    background: #26275D;
-    /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(left top, #26275D, #0684A0);
-    /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(bottom right, #26275D, #0684A0);
-    /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(bottom right, #26275D, #0684A0);
-    /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to bottom right, #26275D, #0684A0);
-    /* Standard syntax */
+  /*background-color: #25275D;*/
+  margin-top: 10px;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding: 0px 0px 0px 0px;
+  background: #26275D;
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, #26275D, #0684A0);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #26275D, #0684A0);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #26275D, #0684A0);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #26275D, #0684A0);
+  /* Standard syntax */
 }
 
 .topmenu h1, .topmenu h1 a, .topmenu h1 a:visited, .topmenu h1 a:active {
-    /*color: #ffffff;*/
-    font-size: 15pt;
-    text-decoration: none;
-    padding: 0px 0px 0px 0px;
+  /*color: #ffffff;*/
+  font-size: 15pt;
+  text-decoration: none;
+  padding: 0px 0px 0px 0px;
 }
 
-.box{
-    position: relative;
-    display: inline-block; /* Make the width of box same as image */
+.box {
+  position: relative;
+  display: inline-block;
+  /* Make the width of box same as image */
 }
-.box .text{
-    position: absolute;
-    top: 40%; /* Adjust this value to move the positioned div up and down */
+
+.box .text {
+  position: absolute;
+  top: 40%;
+  /* Adjust this value to move the positioned div up and down */
 }
 
 .page-header {
-    background-color: #BDD4DF;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 0px;
-    padding: 0px 0px 0px 0px;
+  background-color: #BDD4DF;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  padding: 0px 0px 0px 0px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 36pt;
-    text-decoration: none;
+  color: #ffffff;
+  font-size: 36pt;
+  text-decoration: none;
 }
 
 .section {
-    background-color: #BDD4DE;
-    margin-top: 5px;
-    margin-right: 0px;
-    padding: 5px 5px 5px 50px;
+  background-color: #BDD4DE;
+  margin-top: 5px;
+  margin-right: 0px;
+  padding: 5px 5px 5px 50px;
 }
 
 .section h1, .section h1 a, .section h1 a:visited, .section h1 a:active {
-    color: #000000;
-    font-size: 18pt;
+  color: #000000;
+  font-size: 18pt;
 }
 
 .title h1, .title h1 a, .title h1 a:visited, .title h1 a:active {
-    color: #000000;
-    font-size: 30pt;
-    text-align: center;
-
+  color: #000000;
+  font-size: 30pt;
+  text-align: center;
 }
 
 .subsection {
-    background-color: #b5698f;
-    margin-top: 5px;
-    margin-right: 0px;
-    padding: 5px 5px 5px 50px;
+  background-color: #b5698f;
+  margin-top: 5px;
+  margin-right: 0px;
+  padding: 5px 5px 5px 50px;
 }
 
 .image_titles {
-    position: absolute; 
-    left: 14%; 
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+  position: absolute;
+  left: 14%;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .image_titles2 {
-    position: absolute; 
-    left: 24%; 
-    font-family: Arial, Helvetica, sans-serif;
+  position: absolute;
+  left: 24%;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .firstbox_title {
-    position: absolute; 
-    left: 48%; 
-    font-weight: 300;
-    font-size: 120%;
+  position: absolute;
+  left: 48%;
+  font-weight: 300;
+  font-size: 120%;
 }
 
 .image_titles3 {
-    position: absolute; 
-    left: 34%;
-    font-family: Arial, Helvetica, sans-serif; 
+  position: absolute;
+  left: 34%;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .image_titles4 {
-    position: absolute; 
-    left: 45%;
-    font-family: Arial, Helvetica, sans-serif; 
+  position: absolute;
+  left: 45%;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 .image_titles5 {
-    position: absolute; 
-    left: 55%;
-    font-family: Arial, Helvetica, sans-serif; 
+  position: absolute;
+  left: 55%;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .image_titles6 {
-    position: absolute; 
-    left: 65%;
-    font-family: Arial, Helvetica, sans-serif; 
+  position: absolute;
+  left: 65%;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .image_titles7 {
-    position: absolute; 
-    left: 75%;
-    font-family: Arial, Helvetica, sans-serif; 
+  position: absolute;
+  left: 75%;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .image_titles8 {
-    position: absolute; 
-    left: 85%;
-    font-family: Arial, Helvetica, sans-serif; 
+  position: absolute;
+  left: 85%;
+  font-family: Arial, Helvetica, sans-serif;
 }
-le
 
-.homepage {
-    margin-left: 10px;
-    margin-right: 10px;
+le .homepage {
+  margin-left: 10px;
+  margin-right: 10px;
 }
+
 .uploadpage {
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 125%;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 125%;
 }
 
 .eightimages {
-    margin-left: 0%;
-    margin-right: 0%;
-    margin-top: 40px;
-    margin-block-start: 20;
-    margin-block-end: 0;
-    text-align: center;
-    position: relative;
+  margin-left: 0%;
+  margin-right: 0%;
+  margin-top: 40px;
+  margin-block-start: 20;
+  margin-block-end: 0;
+  text-align: center;
+  position: relative;
 }
 
-
 .fourimages {
-    margin-left: 0%;
-    margin-right: 0%;
-    margin-top: 40px;
-    margin-block-start: 20;
-    margin-block-end: 0;
-    text-align: center;
-    position: relative;
+  margin-left: 0%;
+  margin-right: 0%;
+  margin-top: 40px;
+  margin-block-start: 20;
+  margin-block-end: 0;
+  text-align: center;
+  position: relative;
 }
 
 .listinputs {
-    margin-left: 20px;
-    margin-right: 10px;
-    font-size: 150%;
+  margin-left: 20px;
+  margin-right: 10px;
+  font-size: 150%;
 }
 
 .centred_name {
-    text-align: center;
-    font-size: 300%;
-    font-weight: 500;
-    margin-block-end: 0em;
+  text-align: center;
+  font-size: 300%;
+  font-weight: 500;
+  margin-block-end: 0em;
 }
 
 .centred_section {
-    text-align: center;
-    font-size: 120%;
-    font-weight: 300;
-    margin-block-end: 0em;
+  text-align: center;
+  font-size: 120%;
+  font-weight: 300;
+  margin-block-end: 0em;
 }
 
 .centred_section_title {
-    text-align: center;
-    font-size: 150%;
-    font-weight: 450;
-    margin-top: 25px;
-    margin-bottom: 10px;
+  text-align: center;
+  font-size: 150%;
+  font-weight: 450;
+  margin-top: 25px;
+  margin-bottom: 10px;
 }
 
 .left_section_title {
-    text-align: left;
-    font-size: 150%;
-    font-weight: 450;
-    margin-top: 25px;
-    margin-bottom: 10px;
+  text-align: left;
+  font-size: 150%;
+  font-weight: 450;
+  margin-top: 25px;
+  margin-bottom: 10px;
 }
 
 .comment {
-    font-size: 80%
+  font-size: 80%
 }
 
 .emphase {
-    font-size: 125%
+  font-size: 125%
 }
 
 .content * {
-    /*color: #000000;*/
-    /*margin-top: 0px;*/
-    /*margin-bottom: 0px;*/
-    margin-left: 0px;
+  /*color: #000000;*/
+  /*margin-top: 0px;*/
+  /*margin-bottom: 0px;*/
+  margin-left: 0px;
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
-    float: right;
-    font-size: 26pt;
-    margin-right: 0px;
+  color: #ffffff;
+  float: right;
+  font-size: 26pt;
+  margin-right: 0px;
 }
 
-
-
 table {
-    width: 100%;
-    table-layout: auto;
-    
+  width: 100%;
+  table-layout: auto;
 }
 
 .th-center, .th-center a {
-    text-align: center;
-    padding: 8px;
-    color: #EFEFEF;
-    /*font-style: light;*/
-    /*font-size: 120%;*/
-    font-weight: 300;
-    margin-top: 0px;
+  text-align: center;
+  padding: 8px;
+  color: #EFEFEF;
+  /*font-style: light;*/
+  /*font-size: 120%;*/
+  font-weight: 300;
+  margin-top: 0px;
 }
 
 .table2 {
-    width: 48%;
-    text-align: center;
-    table-layout: fixed;
-    display: table;
-    border-collapse: separate;
-    box-sizing: border-box;
-    border-color: grey;
-    color: black;
-    margin-top: 0px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+  width: 48%;
+  text-align: center;
+  table-layout: fixed;
+  display: table;
+  border-collapse: separate;
+  box-sizing: border-box;
+  border-color: grey;
+  color: black;
+  margin-top: 0px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .table0 {
-    width: 100%;
-    table-layout: fixed;
-    display: table;
-    border-collapse: separate;
-    box-sizing: border-box;
-    border-color: White;
-    background-color: White;
+  width: 100%;
+  table-layout: fixed;
+  display: table;
+  border-collapse: separate;
+  box-sizing: border-box;
+  border-color: White;
+  background-color: White;
 }
 
 .table3 {
-    width: 48%;
-    table-layout: fixed;
-    display: table;
-    border-collapse: separate;
-    box-sizing: border-box;
-    border-color: grey;
-    color: black;
-    margin-top: 48px;
+  width: 48%;
+  table-layout: fixed;
+  display: table;
+  border-collapse: separate;
+  box-sizing: border-box;
+  border-color: grey;
+  color: black;
+  margin-top: 48px;
 }
 
-
 .td-center {
-    text-align: center;
-    padding: 8px;
-    
+  text-align: center;
+  padding: 8px;
 }
 
 .td-center1 {
-    text-align: center;
-    padding: 8px;
-    color: #000;
-    background-color: #fff;
-    font-weight:bold;
+  text-align: center;
+  padding: 8px;
+  color: #000;
+  background-color: #fff;
+  font-weight: bold;
 }
 
 .td-center1 a {
-	color: #000;
-	background-color: #fff;
-	font-weight:500;
+  color: #000;
+  background-color: #fff;
+  font-weight: 500;
 }
 
-
 .td-center1 a:hover {
-	color: #B998B5;
-	text-decoration: none;
+  color: #B998B5;
+  text-decoration: none;
 }
 
 .td-center1selected {
-    text-align: center;
-    padding: 8px;
-    color: #fff;
-    background-color: #000;
-    font-weight:bold;
+  text-align: center;
+  padding: 8px;
+  color: #fff;
+  background-color: #000;
+  font-weight: bold;
 }
 
 .td-center1selected a {
-	color: #fff;
-	background-color: #000;
-	font-weight:500;
+  color: #fff;
+  background-color: #000;
+  font-weight: 500;
 }
 
-
 nav ul li a:hover {
-	color: #B998B5;
-	text-decoration: none;
+  color: #B998B5;
+  text-decoration: none;
 }
 
 .td-border {
-    /*border-width: 1px;
+  /*border-width: 1px;
 	border-style: solid;
 	border-color: black;*/
 }
 
 .th {
-    text-align: left;
-    padding: 8px;
-    color: #EFEFEF;
-    font-weight: 300;
-    width: auto !important;
+  text-align: left;
+  padding: 8px;
+  color: #EFEFEF;
+  font-weight: 300;
+  width: auto !important;
 }
 
-
 .th, .td, .thead th, .tbody td, .tfoot td, .tfoot th {
-    width: auto !important;
-    font-size: 5pt;
+  width: auto !important;
+  font-size: 5pt;
 }
 
 td {
-    text-align: left;
-    padding: 40px;
+  text-align: left;
+  padding: 40px;
 }
 
-
 tr:nth-child(even) {
-    background-color: #BDD4DE
+  background-color: #BDD4DE
 }
 
 th {
-    background-color: #3F5765;
-    color: white;
+  background-color: #3F5765;
+  color: white;
 }
 
 th2 {
-    background-color: white;
-    color: black;
+  background-color: white;
+  color: black;
 }
 
 img.one {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 img.cutout {
-    height: 10%;
-    width: 10%;
+  height: 10%;
+  width: 10%;
 }
 
-
 .editor-contents pre {
-    padding: 0px;
-    border-radius: 0px;
-    border: 1px solid #d3dce6;
-    background-color: #f5f5f5;
-    margin-bottom: 16px;
-    margin-left: 16px;
-    width: 85%;
-    overflow: auto;
-    font-family: "Droid Sans Mono","Inconsolata","Menlo","Consolas","Bitstream Vera Sans Mono","Courier",monospace;
-    font-size: 14px;
-    line-height: 20px;
+  padding: 0px;
+  border-radius: 0px;
+  border: 1px solid #d3dce6;
+  background-color: #f5f5f5;
+  margin-bottom: 16px;
+  margin-left: 16px;
+  width: 85%;
+  overflow: auto;
+  font-family: "Droid Sans Mono", "Inconsolata", "Menlo", "Consolas", "Bitstream Vera Sans Mono", "Courier", monospace;
+  font-size: 14px;
+  line-height: 20px;
 }
 
 .editor-contents pre code {
-    border: none;
-    background-color: none;
-    padding: 10px;
-    font-size: 14px;
-    line-height: 20px;
-}
-.editor-contents code{
-    border: 1px solid #d3dce6;
-    background-color: #f5f5f5;
-    padding: 10 0px;
-    border-radius: 4px;
-    font-style: normal;
-    font-family: "Droid Sans Mono","Inconsolata","Menlo","Consolas","Bitstream Vera Sans Mono","Courier",monospace;
-    display: inline-block;
-    line-height: 24px;
-    font-size: 14px;
-    line-height: 20px;
+  border: none;
+  background-color: none;
+  padding: 10px;
+  font-size: 14px;
+  line-height: 20px;
 }
 
-button2
-{
-    padding:0;
-    background-color:transparent;
-    text-decoration:underline;
-    border:none;
-    border:0;
-    color:#EFEFEF;
-    cursor:pointer;
-    font-family:inherit;
-    font-size:inherit;
-    font-weight: 300;
+.editor-contents code {
+  border: 1px solid #d3dce6;
+  background-color: #f5f5f5;
+  padding: 10 0px;
+  border-radius: 4px;
+  font-style: normal;
+  font-family: "Droid Sans Mono", "Inconsolata", "Menlo", "Consolas", "Bitstream Vera Sans Mono", "Courier", monospace;
+  display: inline-block;
+  line-height: 24px;
+  font-size: 14px;
+  line-height: 20px;
 }
 
-button2::-moz-focus-inner
-{
-    border:0;
-    padding:0;
+button2 {
+  padding: 0;
+  background-color: transparent;
+  text-decoration: underline;
+  border: none;
+  border: 0;
+  color: #EFEFEF;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: 300;
 }
 
-
-
-
+button2::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
 
 tr {
-    font-size:15px;
+  font-size: 15px;
 }
+
 /*
 th {
     font-size:30px;
@@ -519,7 +505,7 @@ li ol, li ul {
 
 nav {
 	/*border-top: 2px solid #eee;
-	border-bottom: 2px solid #eee; 	 
+	border-bottom: 2px solid #eee;
 	height: 560px;
     	margin-top: 10px;
     	margin-right: 0px;
@@ -545,7 +531,7 @@ nav ul li a {
     color: #000;
     display: block;
     font-family: 'Exo 2',Arial,sans-serif;
-    /*font-size: 16px; 
+    /*font-size: 16px;
     letter-spacing: 0;
     margin-top:8px;
     font-weight: bold;
@@ -553,7 +539,7 @@ nav ul li a {
     text-decoration: none;
 }
 nav ul li.selected a,
-nav ul li.selected a:hover { 
+nav ul li.selected a:hover {
 	color: #fff;
 	background-color: #000;
 	font-weight:bold;
@@ -574,7 +560,23 @@ nav ul li a:hover {
 
 
 /*  For the lens visit card  */
-.visit-card {width:550px;text-align:center;border:1px solid black}
-.visit-card table td {padding:2px;}
-.visit-card .properties {width:300px;}
-.visit-card .img-container {width:204px;height:204px;border:1px solid #777777;padding: 5px}
+.visit-card {
+  width: 550px;
+  text-align: center;
+  border: 1px solid black
+}
+
+.visit-card table td {
+  padding: 2px;
+}
+
+.visit-card .properties {
+  width: 300px;
+}
+
+.visit-card .img-container {
+  width: 204px;
+  height: 204px;
+  border: 1px solid #777777;
+  padding: 5px
+}
