--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -21,7 +21,7 @@
 
 <div class="jb-container">
   <div class="jb-float-child-1">
-    <h1 class="jb-heading-1">User Profile</h1>
+    <h1 class="jb-heading-1">User Profile {{ user.username }}</h1>
   </div>
   <div class="jb-float-child-2">
     <img src="{% static 'images/JB_User_Icon.png' %}" loading="lazy" width="100" alt="" class="jb-image-2">
