--- a/lenses/templates/lenses/lens_cede_ownership.html
+++ b/lenses/templates/lenses/lens_cede_ownership.html
@@ -36,5 +36,13 @@ Cede ownership?
 {% block extrascripts %}
 <script>
   users_autocomplete('id_heir');
+  
+    // The following is needed for select2 to work properly in a modal
+  $('#id_heir').select2({
+      width: '100%',
+      placeholder: 'Search for a user',
+      minimumInputLength: 1,
+      dropdownParent: $('#id-modal')
+  });
 </script>
 {% endblock extrascripts %}
